docs(reserve): add route /api/reserve in the Swagger Documentation
